--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "typography-theme-kirkham": "^0.16.19"
   },
   "devDependencies": {
-    "prettier": "2.1.2"
+    "prettier": "2.1.2",
+    "typescript": "^4.2.4"
   },
   "repository": {
     "type": "git",
