--- a/tsconfig.json
+++ b/tsconfig.json
@@ -69,6 +69,6 @@
     "skipLibCheck": true,                           /* Skip type checking of declaration files. */
     "forceConsistentCasingInFileNames": true        /* Disallow inconsistently-cased references to the same file. */
   },
-  "include": ["./scr"],
-  "exclude": ["./node_modules", "./public", "./.cache"]
+  "include": ["./src"],
+  "exclude": ["./node_modules", "./public", "./.cache"],
 }
