--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "license": "0BSD",
   "scripts": {
     "build": "gatsby build",
-    "develop": "gatsby develop",
+    "develop:gatsby": "gatsby develop",
+    "develop:type-check": "tsc --watch",
+    "develop": "npm-run-all --parallel develop:gatsby develop:type-check",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
@@ -27,6 +29,7 @@
     "typography-theme-kirkham": "^0.16.19"
   },
   "devDependencies": {
+    "npm-run-all": "^4.1.5",
     "prettier": "2.1.2",
     "typescript": "^4.2.4"
   },
