--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@emotion/core": "^10.0.35",
+    "@types/typography": "^0.16.3",
     "gatsby": "^2.24.84",
     "gatsby-plugin-emotion": "^4.3.14",
     "gatsby-plugin-typography": "^2.5.13",
