--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-typography": "^0.16.19",
+    "ts-node": "^9.1.1",
     "typography": "^0.16.19",
     "typography-theme-kirkham": "^0.16.19"
   },
